// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Capstan feedback verify snapshots > keeps behavior-oriented smoke failure output stable 1`] = `
"Capstan Verify
App: <APP_ROOT>
Status: failed
Summary: 5/6 steps passed, 4 errors, 0 warnings

[passed] Generated Structure (<DURATION>ms)
diagnostics: none

[passed] Surface Contracts (<DURATION>ms)
diagnostics: none

[passed] TypeScript Check (<DURATION>ms)
command: <REPO_ROOT>node_modules/.bin/tsc -p <APP_ROOT>/tsconfig.json --noEmit
diagnostics: none

[passed] Generated Build (<DURATION>ms)
command: <REPO_ROOT>node_modules/.bin/tsc -p <APP_ROOT>/tsconfig.json
diagnostics: none

[passed] Generated Assertions (<DURATION>ms)
diagnostics: none

[failed] Runtime Smoke (<DURATION>ms)
- [error] human_surface_render_mismatch: Built \`renderHumanSurfaceDocument()\` no longer matches the exported human surface HTML.
  at <APP_ROOT>/dist/index.js
  hint: Keep the generated human surface render function aligned with the built HTML export.
- [error] agent_transport_search_count_mismatch: Built transport search no longer returns a manifest-sized discovery result for an empty query.
  at <APP_ROOT>/dist/index.js
  hint: Keep transport discovery aligned with the exported agent manifest.
- [error] human_surface_route_projection_mismatch: Built human surface document no longer projects every generated route.
  at <APP_ROOT>/dist/human-surface/index.js
  detail: Expected 4 route nodes, received 0.
  hint: Keep the generated human surface HTML aligned with the route projection.
- [error] invalid_human_surface_route_result_output: Built human surface route result output no longer reflects the initial idle route state.
  at <APP_ROOT>/dist/human-surface/index.js
  hint: Keep the generated human surface runtime wiring the route result projection to the initial snapshot.

Repair Checklist
1. Runtime Smoke: Built \`renderHumanSurfaceDocument()\` no longer matches the exported human surface HTML.
   at <APP_ROOT>/dist/index.js
   next: Keep the generated human surface render function aligned with the built HTML export.
2. Runtime Smoke: Built transport search no longer returns a manifest-sized discovery result for an empty query.
   at <APP_ROOT>/dist/index.js
   next: Keep transport discovery aligned with the exported agent manifest.
3. Runtime Smoke: Built human surface document no longer projects every generated route.
   at <APP_ROOT>/dist/human-surface/index.js
   next: Keep the generated human surface HTML aligned with the route projection.
4. Runtime Smoke: Built human surface route result output no longer reflects the initial idle route state.
   at <APP_ROOT>/dist/human-surface/index.js
   next: Keep the generated human surface runtime wiring the route result projection to the initial snapshot.
"
`;

exports[`Capstan feedback verify snapshots > keeps contract failure JSON diagnostics stable 1`] = `
{
  "appRoot": "<APP_ROOT>",
  "diagnostics": [
    {
      "code": "policy_projection_mismatch",
      "detail": "Expected policy "reviewRequired", received "missing".",
      "file": "<APP_ROOT>/agent-surface.json",
      "hint": "Regenerate the agent surface manifest so policy-aware consumers see the right boundary.",
      "severity": "error",
      "source": "capstan",
      "summary": "Capability "generateDigest" lost its policy projection.",
    },
    {
      "code": "missing_transport_auth_effect",
      "file": "<APP_ROOT>/agent-surface.json",
      "hint": "Regenerate the app so agent consumers can reason about the available auth effects.",
      "severity": "error",
      "source": "capstan",
      "summary": "Transport auth effect "redact" is missing from the agent surface manifest.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
  ],
  "generatedBy": "capstan-feedback",
  "status": "failed",
  "steps": [
    {
      "diagnostics": [],
      "durationMs": 0,
      "key": "structure",
      "label": "Generated Structure",
      "status": "passed",
    },
    {
      "diagnostics": [
        {
          "code": "policy_projection_mismatch",
          "detail": "Expected policy "reviewRequired", received "missing".",
          "file": "<APP_ROOT>/agent-surface.json",
          "hint": "Regenerate the agent surface manifest so policy-aware consumers see the right boundary.",
          "severity": "error",
          "source": "capstan",
          "summary": "Capability "generateDigest" lost its policy projection.",
        },
        {
          "code": "missing_transport_auth_effect",
          "file": "<APP_ROOT>/agent-surface.json",
          "hint": "Regenerate the app so agent consumers can reason about the available auth effects.",
          "severity": "error",
          "source": "capstan",
          "summary": "Transport auth effect "redact" is missing from the agent surface manifest.",
        },
      ],
      "durationMs": 0,
      "key": "contracts",
      "label": "Surface Contracts",
      "status": "failed",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "typecheck",
      "label": "TypeScript Check",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "build",
      "label": "Generated Build",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "assertions",
      "label": "Generated Assertions",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "smoke",
      "label": "Runtime Smoke",
      "status": "skipped",
    },
  ],
  "summary": {
    "diagnosticCount": 6,
    "errorCount": 2,
    "failedSteps": 1,
    "passedSteps": 1,
    "skippedSteps": 4,
    "status": "failed",
    "stepCount": 6,
    "warningCount": 0,
  },
}
`;

exports[`Capstan feedback verify snapshots > keeps contract failure JSON diagnostics stable 2`] = `
{
  "appRoot": "<APP_ROOT>",
  "diagnostics": [
    {
      "code": "policy_projection_mismatch",
      "detail": "Expected policy "reviewRequired", received "missing".",
      "file": "<APP_ROOT>/agent-surface.json",
      "hint": "Regenerate the agent surface manifest so policy-aware consumers see the right boundary.",
      "severity": "error",
      "source": "capstan",
      "summary": "Capability "generateDigest" lost its policy projection.",
    },
    {
      "code": "missing_transport_auth_effect",
      "file": "<APP_ROOT>/agent-surface.json",
      "hint": "Regenerate the app so agent consumers can reason about the available auth effects.",
      "severity": "error",
      "source": "capstan",
      "summary": "Transport auth effect "redact" is missing from the agent surface manifest.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because contracts failed.",
    },
  ],
  "generatedBy": "capstan-feedback",
  "status": "failed",
  "steps": [
    {
      "diagnostics": [],
      "durationMs": 0,
      "key": "structure",
      "label": "Generated Structure",
      "status": "passed",
    },
    {
      "diagnostics": [
        {
          "code": "policy_projection_mismatch",
          "detail": "Expected policy "reviewRequired", received "missing".",
          "file": "<APP_ROOT>/agent-surface.json",
          "hint": "Regenerate the agent surface manifest so policy-aware consumers see the right boundary.",
          "severity": "error",
          "source": "capstan",
          "summary": "Capability "generateDigest" lost its policy projection.",
        },
        {
          "code": "missing_transport_auth_effect",
          "file": "<APP_ROOT>/agent-surface.json",
          "hint": "Regenerate the app so agent consumers can reason about the available auth effects.",
          "severity": "error",
          "source": "capstan",
          "summary": "Transport auth effect "redact" is missing from the agent surface manifest.",
        },
      ],
      "durationMs": 0,
      "key": "contracts",
      "label": "Surface Contracts",
      "status": "failed",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "typecheck",
      "label": "TypeScript Check",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "build",
      "label": "Generated Build",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "assertions",
      "label": "Generated Assertions",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because contracts failed.",
        },
      ],
      "durationMs": 0,
      "key": "smoke",
      "label": "Runtime Smoke",
      "status": "skipped",
    },
  ],
  "summary": {
    "diagnosticCount": 6,
    "errorCount": 2,
    "failedSteps": 1,
    "passedSteps": 1,
    "skippedSteps": 4,
    "status": "failed",
    "stepCount": 6,
    "warningCount": 0,
  },
}
`;

exports[`Capstan feedback verify snapshots > keeps human-readable smoke failure output stable 1`] = `
"Capstan Verify
App: <APP_ROOT>
Status: failed
Summary: 5/6 steps passed, 3 errors, 0 warnings

[passed] Generated Structure (<DURATION>ms)
diagnostics: none

[passed] Surface Contracts (<DURATION>ms)
diagnostics: none

[passed] TypeScript Check (<DURATION>ms)
command: <REPO_ROOT>node_modules/.bin/tsc -p <APP_ROOT>/tsconfig.json --noEmit
diagnostics: none

[passed] Generated Build (<DURATION>ms)
command: <REPO_ROOT>node_modules/.bin/tsc -p <APP_ROOT>/tsconfig.json
diagnostics: none

[passed] Generated Assertions (<DURATION>ms)
diagnostics: none

[failed] Runtime Smoke (<DURATION>ms)
- [error] missing_control_plane_search: Smoke check could not call \`controlPlane.search\` from the built application.
  at <APP_ROOT>/dist/index.js
  hint: Preserve the generated control plane export in \`src/index.ts\` and rerun the build.
- [error] missing_control_plane_execute: Smoke check could not call \`controlPlane.execute\` from the built application.
  at <APP_ROOT>/dist/index.js
  hint: Preserve the generated control plane execute path so agent and human flows stay convergent.
- [error] missing_agent_transport_handler: Smoke check could not find \`handleAgentSurfaceRequest\` in the built application.
  at <APP_ROOT>/dist/index.js
  hint: Preserve the generated agent transport export in \`src/index.ts\` and rerun the build.

Repair Checklist
1. Runtime Smoke: Smoke check could not call \`controlPlane.search\` from the built application.
   at <APP_ROOT>/dist/index.js
   next: Preserve the generated control plane export in \`src/index.ts\` and rerun the build.
2. Runtime Smoke: Smoke check could not call \`controlPlane.execute\` from the built application.
   at <APP_ROOT>/dist/index.js
   next: Preserve the generated control plane execute path so agent and human flows stay convergent.
3. Runtime Smoke: Smoke check could not find \`handleAgentSurfaceRequest\` in the built application.
   at <APP_ROOT>/dist/index.js
   next: Preserve the generated agent transport export in \`src/index.ts\` and rerun the build.
"
`;

exports[`Capstan feedback verify snapshots > keeps typecheck failure JSON diagnostics stable 1`] = `
{
  "appRoot": "<APP_ROOT>",
  "diagnostics": [
    {
      "code": "typescript_error",
      "column": 5,
      "detail": "TS2322",
      "file": "../../../../../../..<APP_ROOT>/src/capabilities/list-tickets.ts",
      "hint": "Align the handler output with the generated type contract before rerunning \`capstan verify\`.",
      "line": 9,
      "severity": "error",
      "source": "typescript",
      "summary": "Type '"pending"' is not assignable to type '"not_implemented" | "completed" | "failed" | "blocked" | "approval_required" | "input_required" | "cancelled"'.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because typecheck failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because typecheck failed.",
    },
    {
      "code": "skipped",
      "severity": "info",
      "source": "capstan",
      "summary": "Verify skipped because typecheck failed.",
    },
  ],
  "generatedBy": "capstan-feedback",
  "status": "failed",
  "steps": [
    {
      "diagnostics": [],
      "durationMs": 0,
      "key": "structure",
      "label": "Generated Structure",
      "status": "passed",
    },
    {
      "diagnostics": [],
      "durationMs": 0,
      "key": "contracts",
      "label": "Surface Contracts",
      "status": "passed",
    },
    {
      "command": "<REPO_ROOT>node_modules/.bin/tsc -p <APP_ROOT>/tsconfig.json --noEmit",
      "diagnostics": [
        {
          "code": "typescript_error",
          "column": 5,
          "detail": "TS2322",
          "file": "../../../../../../..<APP_ROOT>/src/capabilities/list-tickets.ts",
          "hint": "Align the handler output with the generated type contract before rerunning \`capstan verify\`.",
          "line": 9,
          "severity": "error",
          "source": "typescript",
          "summary": "Type '"pending"' is not assignable to type '"not_implemented" | "completed" | "failed" | "blocked" | "approval_required" | "input_required" | "cancelled"'.",
        },
      ],
      "durationMs": 0,
      "key": "typecheck",
      "label": "TypeScript Check",
      "status": "failed",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because typecheck failed.",
        },
      ],
      "durationMs": 0,
      "key": "build",
      "label": "Generated Build",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because typecheck failed.",
        },
      ],
      "durationMs": 0,
      "key": "assertions",
      "label": "Generated Assertions",
      "status": "skipped",
    },
    {
      "diagnostics": [
        {
          "code": "skipped",
          "severity": "info",
          "source": "capstan",
          "summary": "Verify skipped because typecheck failed.",
        },
      ],
      "durationMs": 0,
      "key": "smoke",
      "label": "Runtime Smoke",
      "status": "skipped",
    },
  ],
  "summary": {
    "diagnosticCount": 4,
    "errorCount": 1,
    "failedSteps": 1,
    "passedSteps": 2,
    "skippedSteps": 3,
    "status": "failed",
    "stepCount": 6,
    "warningCount": 0,
  },
}
`;
